# octcalc

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Jenkinsfile  README.md  winbuild-clang.bat  winbuild-msvc.bat
src/: CMakeLists.txt  LGPL3Qt.txt  licenses.txt  main.cpp  octcalc.rc  octcalc64x64.hpp  octcli.cpp  octcore.cpp  octcore.hpp  octgui.cpp  rng.hpp
